samples/_failures_safe/1761418764_557af5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_108cf15a.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_108cf15a.c:154:5: error: expected expression at end of input
  154 |     while (!isEmpty(minHeap))
      |     ^~~~~
./samples/SAFE/__tmp_108cf15a.c:154:5: error: expected declaration or statement at end of input
